--- a/Resources/Prototypes/_CP14/Reagents/magic-essence.yml
+++ b/Resources/Prototypes/_CP14/Reagents/magic-essence.yml
@@ -1,10 +1,12 @@
+
+# Basic 6 
+
 - type: reagent
   id: CP14EssenceEarth
   name: cp14-reagent-name-essence-earth
   desc: cp14-reagent-desc-essence-earth
   group: CP14MagicEssence
   flavor: CP14Bitterly
-  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#70533f"
   tileReactions:
@@ -17,7 +19,6 @@
   desc: cp14-reagent-desc-essence-fire
   group: CP14MagicEssence
   flavor: CP14Bitterly
-  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#d9741c"
   tileReactions:
@@ -25,25 +26,11 @@
     entity: CP14EssenceFire
 
 - type: reagent
-  id: CP14EssenceLife
-  name: cp14-reagent-name-essence-life
-  desc: cp14-reagent-desc-essence-life
-  group: CP14MagicEssence
-  flavor: CP14Bitterly
-  recognizable: true
-  physicalDesc: cp14-reagent-physical-desc-sparkling
-  color: "#89e04f"
-  tileReactions:
-  - !type:CreateEntityTileReaction
-    entity: CP14EssenceLife
-
-- type: reagent
   id: CP14EssenceWater
   name: cp14-reagent-name-essence-water
   desc: cp14-reagent-desc-essence-water
   group: CP14MagicEssence
   flavor: CP14Bitterly
-  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#1c94d9"
   tileReactions:
@@ -51,12 +38,61 @@
     entity: CP14EssenceWater
 
 - type: reagent
+  id: CP14EssenceAir
+  name: cp14-reagent-name-essence-air
+  desc: cp14-reagent-desc-essence-air
+  group: CP14MagicEssence
+  flavor: CP14Bitterly
+  physicalDesc: cp14-reagent-physical-desc-sparkling
+  color: "#def9ff"
+  tileReactions:
+  - !type:CreateEntityTileReaction
+    entity: CP14EssenceAir
+
+- type: reagent
+  id: CP14EssenceOrder
+  name: cp14-reagent-name-essence-order
+  desc: cp14-reagent-desc-essence-order
+  group: CP14MagicEssence
+  flavor: CP14Bitterly
+  physicalDesc: cp14-reagent-physical-desc-sparkling
+  color: "#d9d9d9"
+  tileReactions:
+  - !type:CreateEntityTileReaction
+    entity: CP14EssenceOrder
+
+- type: reagent
+  id: CP14EssenceChaos
+  name: cp14-reagent-name-essence-chaos
+  desc: cp14-reagent-desc-essence-chaos
+  group: CP14MagicEssence
+  flavor: CP14Bitterly
+  physicalDesc: cp14-reagent-physical-desc-sparkling
+  color: "#5c5c5c"
+  tileReactions:
+  - !type:CreateEntityTileReaction
+    entity: CP14EssenceChaos
+
+# Complex tier 1
+
+- type: reagent
+  id: CP14EssenceFrost
+  name: cp14-reagent-name-essence-frost
+  desc: cp14-reagent-desc-essence-frost
+  group: CP14MagicEssence
+  flavor: CP14Bitterly
+  physicalDesc: cp14-reagent-physical-desc-sparkling
+  color: "#4f91bd"
+  tileReactions:
+  - !type:CreateEntityTileReaction
+    entity: CP14EssenceFrost
+
+- type: reagent
   id: CP14EssenceLight
   name: cp14-reagent-name-essence-light
   desc: cp14-reagent-desc-essence-light
   group: CP14MagicEssence
   flavor: CP14Bitterly
-  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#ba97b8"
   tileReactions:
@@ -64,30 +100,28 @@
     entity: CP14EssenceLight
 
 - type: reagent
-  id: CP14EssenceDimension
-  name: cp14-reagent-name-essence-dimension
-  desc: cp14-reagent-desc-essence-dimension
+  id: CP14EssenceMotion
+  name: cp14-reagent-name-essence-motion
+  desc: cp14-reagent-desc-essence-motion
   group: CP14MagicEssence
   flavor: CP14Bitterly
-  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
-  color: "#391c57"
+  color: "#575100"
   tileReactions:
   - !type:CreateEntityTileReaction
-    entity: CP14EssenceDimension
+    entity: CP14EssenceMotion
 
 - type: reagent
-  id: CP14EssenceDeath
-  name: cp14-reagent-name-essence-death
-  desc: cp14-reagent-desc-essence-death
+  id: CP14EssenceCycle
+  name: cp14-reagent-name-essence-cycle
+  desc: cp14-reagent-desc-essence-cycle
   group: CP14MagicEssence
   flavor: CP14Bitterly
-  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
-  color: "#55877a"
+  color: "#063b1f"
   tileReactions:
   - !type:CreateEntityTileReaction
-    entity: CP14EssenceDeath
+    entity: CP14EssenceCycle
 
 - type: reagent
   id: CP14EssenceElectric
@@ -95,9 +129,56 @@
   desc: cp14-reagent-desc-essence-electric
   group: CP14MagicEssence
   flavor: CP14Bitterly
-  recognizable: true
   physicalDesc: cp14-reagent-physical-desc-sparkling
   color: "#caed72"
   tileReactions:
   - !type:CreateEntityTileReaction
     entity: CP14EssenceElectric
+
+- type: reagent
+  id: CP14EssencePoison
+  name: cp14-reagent-name-essence-poison
+  desc: cp14-reagent-desc-essence-poison
+  group: CP14MagicEssence
+  flavor: CP14Bitterly
+  physicalDesc: cp14-reagent-physical-desc-sparkling
+  color: "#619e20"
+  tileReactions:
+  - !type:CreateEntityTileReaction
+    entity: CP14EssencePoison
+
+- type: reagent
+  id: CP14EssenceVoid
+  name: cp14-reagent-name-essence-void
+  desc: cp14-reagent-desc-essence-void
+  group: CP14MagicEssence
+  flavor: CP14Bitterly
+  physicalDesc: cp14-reagent-physical-desc-sparkling
+  color: "#12021c"
+  tileReactions:
+  - !type:CreateEntityTileReaction
+    entity: CP14EssenceVoid
+
+- type: reagent
+  id: CP14EssenceLife
+  name: cp14-reagent-name-essence-life
+  desc: cp14-reagent-desc-essence-life
+  group: CP14MagicEssence
+  flavor: CP14Bitterly
+  physicalDesc: cp14-reagent-physical-desc-sparkling
+  color: "#eb1a3d"
+  tileReactions:
+  - !type:CreateEntityTileReaction
+    entity: CP14EssenceLife
+
+- type: reagent
+  id: CP14EssenceCrystal
+  name: cp14-reagent-name-essence-crystal
+  desc: cp14-reagent-desc-essence-crystal
+  group: CP14MagicEssence
+  flavor: CP14Bitterly
+  physicalDesc: cp14-reagent-physical-desc-sparkling
+  color: "#538cb8"
+  tileReactions:
+  - !type:CreateEntityTileReaction
+    entity: CP14EssenceCrystal
