--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Crystal/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Crystal/base.yml
@@ -2,12 +2,17 @@
   id: CP14CrystalBase
   abstract: true
   parent: BaseRock
-  name: sparkling quartz
+  name: quartz
   description: Natural quartz crystals that can absorb the magical energy of the world around them. 
   categories: [ ForkFiltered ]
   components:
   - type: Sprite
     drawdepth: Mobs
+    sprite: _CP14/Structures/Flora/Crystal/crystal.rsi
+    layers:
+      - state: medium1
+        map: ["random"]
+        shader: unshaded
     offset: 0, 0.25
     noRot: true
   - type: InteractionPopup
@@ -40,90 +45,23 @@
           - Opaque
   - type: PointLight
     netSync: false
-
-- type: entity
-  parent: CP14CrystalBase
-  id: CP14CrystalBigBase
-  abstract: true
-  components:
-  - type: Sprite
-    sprite: _CP14/Structures/Flora/Crystal/crystal_big.rsi
-    layers:
-      - state: big1
-        shader: unshaded
-        map: ["random"]
-  - type: InteractionPopup
-    interactSuccessSound:
-      collection: CP14CrystalDings
-      params:
-        pitch: 0.5
-        variation: 0.03
-  - type: PointLight
-    radius: 4
-    energy: 1.5
   - type: RandomSprite
     available:
     - random:
         big0: Inherit
         big1: Inherit
         big2: Inherit
-
-- type: entity
-  parent: CP14CrystalBase
-  id: CP14CrystalMediumBase
-  abstract: true
-  components:
-  - type: Sprite
-    sprite: _CP14/Structures/Flora/Crystal/crystal_medium.rsi
-    layers:
-      - state: medium4
-        shader: unshaded
-        map: ["random"]
-  - type: InteractionPopup
-    interactSuccessSound:
-      collection: CP14CrystalDings
-      params:
-        pitch: 1
-        variation: 0.03
-  - type: PointLight
-    radius: 2.5
-    energy: 1
-  - type: RandomSprite
-    available:
-    - random:
         medium0: Inherit
         medium1: Inherit
         medium2: Inherit
         medium3: Inherit
         medium4: Inherit
-
-- type: entity
-  parent: CP14CrystalBase
-  id: CP14CrystalSmallBase
-  abstract: true
-  components:
-  - type: Sprite
-    sprite: _CP14/Structures/Flora/Crystal/crystal_small.rsi
-    layers:
-      - state: small1
-        shader: unshaded
-        map: ["random"]
-  - type: InteractionPopup
-    interactSuccessSound:
-      collection: CP14CrystalDings
-      params:
-        pitch: 1.5
-        variation: 0.03
-  - type: PointLight
-    radius: 1.5
-    energy: 0.5
-  - type: RandomSprite
-    available:
-    - random:
         small0: Inherit
         small1: Inherit
         small2: Inherit
         small3: Inherit
         small4: Inherit
         small5: Inherit
-  - type: Appearance
+  - type: PointLight
+    radius: 2.5
+    energy: 1
