--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Crystal/elemental.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Crystal/elemental.yml
@@ -1,3 +1,71 @@
+- type: entity
+  id: CP14CrystalBase
+  abstract: true
+  parent: BaseRock
+  name: quartz
+  description: Natural quartz crystals that can absorb the magical energy of the world around them. 
+  categories: [ ForkFiltered ]
+  components:
+  - type: Sprite
+    drawdepth: Mobs
+    sprite: _CP14/Structures/Flora/Crystal/crystal.rsi
+    layers:
+      - state: medium1
+        map: ["random"]
+        shader: unshaded
+    offset: 0, 0.25
+    noRot: true
+  - type: InteractionPopup
+    interactSuccessString: popup-cp14crystal-ding
+    messagePerceivedByOthers: popup-cp14crystal-ding
+    interactSuccessSound:
+      collection: CP14CrystalDings
+      params:
+        variation: 0.03
+  - type: Damageable 
+    damageContainer: Inorganic
+    damageModifierSet: Glass
+  - type: MeleeSound
+    soundGroups:
+      Brute:
+        collection: GlassSmash
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.30
+        density: 60
+        mask:
+          - MachineMask
+        layer:
+          - MidImpassable
+          - LowImpassable
+          - BulletImpassable
+          - Opaque
+  - type: PointLight
+    netSync: false
+  - type: RandomSprite
+    available:
+    - random:
+        big0: Inherit
+        big1: Inherit
+        big2: Inherit
+        medium0: Inherit
+        medium1: Inherit
+        medium2: Inherit
+        medium3: Inherit
+        medium4: Inherit
+        small0: Inherit
+        small1: Inherit
+        small2: Inherit
+        small3: Inherit
+        small4: Inherit
+        small5: Inherit
+  - type: PointLight
+    radius: 2.5
+    energy: 1
+
 # Normal
 
 - type: entity
