--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Crystal/shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Crystal/shards.yml
@@ -30,66 +30,73 @@
 
 - type: entity
   parent: CP14CrystalShardBase
-  id: CP14CrystalShardWater
-  suffix: Water
+  id: CP14CrystalShardEarth
+  suffix: Terra
   components:
   - type: Sprite
-    color: "#5eabeb"
+    color: "#70533f"
   - type: CP14MagicEssenceContainer
     essences:
-      Water: 3
-
-- type: entity
-  parent: CP14CrystalShardBase
-  id: CP14CrystalShardHealing
-  suffix: Life
-  components:
-  - type: Sprite
-    color: "#3de063"
-  - type: CP14MagicEssenceContainer
-    essences:
-      Life: 3
+      Earth: 3
+      Crystal: 1
 
 - type: entity
   parent: CP14CrystalShardBase
   id: CP14CrystalShardFire
-  suffix: Fire
+  suffix: Ignis
   components:
   - type: Sprite
-    color: "#ed731c"
+    color: "#d9741c"
   - type: CP14MagicEssenceContainer
     essences:
       Fire: 3
+      Crystal: 1
 
 - type: entity
   parent: CP14CrystalShardBase
-  id: CP14CrystalShardLight
-  suffix: Light
+  id: CP14CrystalShardWater
+  suffix: Ignis
   components:
   - type: Sprite
-    color: "#f1c7ff"
+    color: "#1c94d9"
   - type: CP14MagicEssenceContainer
     essences:
-      Light: 3
+      Water: 3
+      Crystal: 1
 
 - type: entity
   parent: CP14CrystalShardBase
-  id: CP14CrystalShardElectric
-  suffix: Electric
+  id: CP14CrystalShardAir
+  suffix: Aer
   components:
   - type: Sprite
-    color: "#e6ff6b"
+    color: "#def9ff"
   - type: CP14MagicEssenceContainer
     essences:
-      Electric: 3
+      Air: 3
+      Crystal: 1
 
 - type: entity
   parent: CP14CrystalShardBase
-  id: CP14CrystalShardDarkness
-  suffix: Dimension
+  id: CP14CrystalShardOrder
+  suffix: Ordo
   components:
   - type: Sprite
-    color: "#391c57"
+    color: "#d9d9d9"
   - type: CP14MagicEssenceContainer
     essences:
-      Dimension: 3
+      Order: 3
+      Crystal: 1
+
+- type: entity
+  parent: CP14CrystalShardBase
+  id: CP14CrystalShardChaos
+  suffix: Perditio
+  components:
+  - type: Sprite
+    color: "#5c5c5c"
+  - type: CP14MagicEssenceContainer
+    essences:
+      Chaos: 3
+      Crystal: 1
+
