--- a/Resources/ConfigPresets/_CP14/Dev.toml
+++ b/Resources/ConfigPresets/_CP14/Dev.toml
@@ -19,6 +19,7 @@ desc = "History of the City of Sword and Magic. A social economic sandbox reinve
 lobbyenabled = true
 soft_max_players = 40
 lobbyduration = 300
+role_timers = false
 
 [server]
 rules_file = "CP14SandboxRU"
