--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Tip/arrows.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Tip/arrows.yml
@@ -6,6 +6,7 @@
   description: The tip on an arrow shaft, a well-finished little piece of metal.
   components:
   - type: Item
+    size: Tiny
     storedRotation: 0
 
 - type: entity
@@ -16,10 +17,7 @@
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/Tip/arrow.rsi
     layers:
-    - state: icon
-    - state: solution1
-      map: ["enum.SolutionContainerLayers.Fill"]
-      visible: false
+    - state: tip
   - type: CP14ModularCraftPart
     possibleParts:
     - TipIronArrow
@@ -35,11 +33,8 @@
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/Tip/arrow.rsi
     layers:
-    - state: icon
+    - state: tip
       color: "#ffaf47"
-    - state: solution1
-      map: ["enum.SolutionContainerLayers.Fill"]
-      visible: false
   - type: CP14ModularCraftPart
     possibleParts:
     - TipGoldArrow
@@ -55,11 +50,8 @@
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/Tip/arrow.rsi
     layers:
-    - state: icon
+    - state: tip
       color: "#bd712f"
-    - state: solution1
-      map: ["enum.SolutionContainerLayers.Fill"]
-      visible: false
   - type: CP14ModularCraftPart
     possibleParts:
     - TipCopperArrow
@@ -75,11 +67,8 @@
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/Tip/arrow.rsi
     layers:
-    - state: icon
+    - state: tip
       color: "#45d2a4"
-    - state: solution1
-      map: ["enum.SolutionContainerLayers.Fill"]
-      visible: false
   - type: CP14ModularCraftPart
     possibleParts:
     - TipMithrilArrow
