--- a/Resources/Prototypes/_CP14/Entities/Objects/Materials/simple.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Materials/simple.yml
@@ -34,6 +34,9 @@
   - type: PhysicalComposition # точно ли это нужно?
     materialComposition:
       CP14Dirt: 100
+  - type: CP14MagicEssenceContainer
+    essences:
+      Earth: 1
 
 - type: entity
   id: CP14DirtBlock10
@@ -79,6 +82,9 @@
   - type: PhysicalComposition # точно ли это нужно?
     materialComposition:
       CP14Stone: 100
+  - type: CP14MagicEssenceContainer
+    essences:
+      Earth: 1
 
 - type: entity
   id: CP14StoneBlock10
