--- a/Resources/ConfigPresets/_CP14/Dev.toml
+++ b/Resources/ConfigPresets/_CP14/Dev.toml
@@ -1,5 +1,5 @@
 [whitelist]
-enabled = false
+enabled = true
 
 [log]
 path = "logs"
@@ -14,12 +14,12 @@ bindto = "::,0.0.0.0"
 max_connections = 100
 
 [game]
-hostname = "⚔️  CrystallEdge Alpha [ENG] ⚔️ Status: Open playtest"
+hostname = "⚔️  CrystallEdge Alpha [RU] ⚔️ Status: Whitelist only"
 desc = "History of the City of Sword and Magic. A social economic sandbox reinventing the Space Station 14 concept in fantasy style"
 lobbyenabled = true
 soft_max_players = 40
 lobbyduration = 300
-role_timers = false
+role_timers = true
 
 [server]
 rules_file = "CP14SandboxRU"
