--- a/Resources/Prototypes/_CP14/Reagents/precurser.yml
+++ b/Resources/Prototypes/_CP14/Reagents/precurser.yml
@@ -4,7 +4,7 @@
 
 - type: reagent
   id: CP14BloodFlowerSap
-  group: CP14Organic
+  group: CP14Precurser
   name: cp14-reagent-name-bloodflowersap
   desc: cp14-reagent-desc-bloodflowersap
   flavor: CP14Metallic
@@ -15,20 +15,10 @@
     collection: FootstepBlood
     params:
       volume: 6
-  metabolisms:
-    Food:
-      effects:
-      - !type:ModifyBloodLevel
-    Poison:
-      effects:
-      - !type:HealthChange
-        damage:
-          types:
-            Poison: 0.15
 
 - type: reagent
   id: CP14YellowDayflinPulp
-  group: CP14Organic
+  group: CP14Precurser
   name: cp14-reagent-name-yellow-dayflin-pulp
   desc: cp14-reagent-desc-yellow-dayflin-pulp
   flavor: CP14Sweetly
@@ -38,7 +28,7 @@
 
 - type: reagent
   id: CP14AirLily
-  group: CP14Organic
+  group: CP14Precurser
   name: cp14-reagent-name-air-lily-juice
   desc: cp14-reagent-desc-air-lily-juice
   flavor: fizzy
@@ -66,7 +56,7 @@
 
 - type: reagent
   id: CP14AgaricMushroom
-  group: CP14Organic
+  group: CP14Precurser
   name: cp14-reagent-name-agaric-shroom
   desc: cp14-reagent-desc-agaric-shroom
   flavor: CP14Bitterly
@@ -93,7 +83,7 @@
 
 - type: reagent
   id: CP14LumiMushroom
-  group: CP14Organic
+  group: CP14Precurser
   name: cp14-reagent-name-lumi-shroom
   desc: cp14-reagent-desc-lumi-shroom
   flavor: CP14Vomit
@@ -120,7 +110,7 @@
 
 - type: reagent
   id: CP14BlueAmanita
-  group: CP14Organic
+  group: CP14Precurser
   name: cp14-reagent-name-blue-amanita
   desc: cp14-reagent-desc-blue-amanita
   flavor: CP14Magic
@@ -142,7 +132,7 @@
 
 - type: reagent
   id: CP14WildSageSap
-  group: CP14Organic
+  group: CP14Precurser
   name: cp14-reagent-name-wild-sage-sap
   desc: cp14-reagent-desc-wild-sage-sap
   flavor: CP14Sweetly
@@ -159,3 +149,62 @@
         emote: Cough
         showInChat: true
         probability: 0.15
+
+# Slime based
+
+- type: reagent
+  id: CP14ChromiumSlime
+  group: CP14Precurser
+  name: cp14-reagent-name-chromium-slime
+  desc: cp14-reagent-desc-chromium-slime
+  flavor: CP14Vomit
+  color: "#3b4872"
+  physicalDesc: cp14-reagent-physical-desc-colorless
+  slippery: true
+  metabolisms:
+    Food:
+      effects:
+      - !type:SatiateThirst
+      - !type:ChemVomit
+        probability: 0.05
+
+# Inorganic
+
+- type: reagent
+  id: CP14GroundQuartz
+  group: CP14Precurser 
+  name: cp14-reagent-name-grounded-quartz
+  desc: cp14-reagent-desc-grounded-quartz
+  flavor: CP14Quartz
+  color: "#9aa6ad"
+  physicalDesc: cp14-reagent-physical-desc-colorless
+  metabolisms:
+    Food:
+      effects:
+      - !type:ChemVomit
+        probability: 0.05
+
+- type: reagent
+  id: CP14WhistlerPoison
+  group: CP14Precurser
+  name: cp14-reagent-name-whistler-poison
+  desc: cp14-reagent-desc-whistler-poison
+  flavor: CP14VerySweet
+  color: "#6bb4bf"
+  physicalDesc: reagent-physical-desc-powdery
+  metabolisms:
+    Narcotic:
+      effects:
+      - !type:Emote
+        emote: Yawn
+        showInChat: true
+        probability: 0.2
+      - !type:GenericStatusEffect
+        conditions:
+        - !type:ReagentThreshold
+          reagent: CP14SleepyPoison
+          min: 8
+        key: ForcedSleep
+        component: ForcedSleeping
+        refresh: false
+        type: Add
