--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/Precursor/wild_sage.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/Precursor/wild_sage.yml
@@ -2,14 +2,14 @@
 # Splitting
 
 - type: reaction
-  id: CP14AgaricShroomSplitting
+  id: CP14WildSageSplitting
   requiredMixerCategories:
   - CP14MagicSplitting
   reactants:
-    CP14AgaricMushroom:
+    CP14WildSageSap:
       amount: 1
   products:
-    CP14EssencePoison: 0.5
+    CP14EssenceEarth: 0.5
   cp14RandomProducts:
-  - CP14EssenceWater: 0.5
-  - CP14EssenceEarth: 0.5
+  - CP14EssenceOrder: 0.5
+  - CP14EssenceChaos: 0.5
