--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/Precursor/blue_amanita.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/Precursor/blue_amanita.yml
@@ -1,17 +1,15 @@
 
 # Splitting
 
-#- type: reaction
-#  id: CP14BlueAmanitaSplitting
-#  requiredMixerCategories:
-#  - CP14MagicSplitting
-#  reactants:
-#    CP14BlueAmanita:
-#      amount: 1
-#  products:
-#    CP14EssenceMagic: 0.5
-#  cp14RandomProducts:
-#  - CP14EssenceWater: 0.5
-#  - CP14EssenceLife: 0.5
-
-#TODO: CP14EssenceMagic
+- type: reaction
+  id: CP14BlueAmanitaSplitting
+  requiredMixerCategories:
+  - CP14MagicSplitting
+  reactants:
+    CP14BlueAmanita:
+      amount: 1
+  products:
+    CP14EssenceMagic: 0.5
+  cp14RandomProducts:
+  - CP14EssenceWater: 0.5
+  - CP14EssenceLife: 0.5
