--- a/Resources/Prototypes/_CP14/Reagents/target_effects.yml
+++ b/Resources/Prototypes/_CP14/Reagents/target_effects.yml
@@ -161,26 +161,6 @@
             Poison: 3
 
 - type: reagent
-  id: CP14BasicEffectPurification
-  name: cp14-reagent-name-basic-purification
-  desc: cp14-reagent-desc-basic-purification
-  group: CP14BasicEffect
-  flavor: CP14Salty
-  color: "#977CB2"
-  physicalDesc: cp14-reagent-physical-desc-grainy
-  worksOnTheDead: true
-  metabolisms:
-    Medicine:
-      metabolismRate: 0.05
-      effects:
-      - !type:HealthChange
-        damage:
-          types:
-            Poison: -4
-      - !type:SatiateThirst
-        factor: -2
-
-- type: reagent
   id: CP14BasicEffectHealAirloss
   name: cp14-reagent-name-basic-heal-airloss
   desc: cp14-reagent-desc-basic-heal-airloss
@@ -471,7 +451,7 @@
         boozePower: 15
 
 - type: reagent
-  id: CP14BasicEffectJitter
+  id: CP14BasicEffectDrunk
   name: cp14-reagent-name-basic-jitter
   desc: cp14-reagent-desc-basic-jitter
   group: CP14BasicEffect
