--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/essence_combining.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/essence_combining.yml
@@ -2,7 +2,8 @@
 
 - type: reaction
   id: CP14EssenceFrost
-  minTemp: 450
+  minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceFire:
       amount: 1
@@ -16,7 +17,8 @@
 
 - type: reaction
   id: CP14EssenceLight
-  minTemp: 450
+  minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceFire:
       amount: 1
@@ -30,7 +32,8 @@
 
 - type: reaction
   id: CP14EssenceMotion
-  minTemp: 450
+  minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceOrder:
       amount: 1
@@ -44,7 +47,8 @@
 
 - type: reaction
   id: CP14EssenceCycle
-  minTemp: 450
+  minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceOrder:
       amount: 1
@@ -58,7 +62,8 @@
 
 - type: reaction
   id: CP14EssenceEnergia
-  minTemp: 450
+  minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceOrder:
       amount: 1
@@ -72,7 +77,8 @@
 
 - type: reaction
   id: CP14EssenceVoid
-  minTemp: 450
+  minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceChaos:
       amount: 1
@@ -86,7 +92,8 @@
 
 - type: reaction
   id: CP14EssencePoison
-  minTemp: 450
+  minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceChaos:
       amount: 1
@@ -100,7 +107,8 @@
 
 - type: reaction
   id: CP14EssenceLife
-  minTemp: 450
+  minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceEarth:
       amount: 1
@@ -114,7 +122,8 @@
 
 - type: reaction
   id: CP14EssenceCrystal
-  minTemp: 450
+  minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceOrder:
       amount: 1
@@ -130,7 +139,8 @@
 
 - type: reaction
   id: CP14EssenceMagic
-  minTemp: 450
+  minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceVoid:
       amount: 1
